<resources>
    <string name="app_name">Ponderize</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="facebook_app_id">182705532228324</string>
    <string name="settings">Settings</string>
    <string name="share">SHARE</string>
    <string name="quiz">Quiz</string>
    <string name="scriptures_notes">Scriptures/Notes</string>
    <string name="scripture_s_reference">Scripture\'s Reference</string>
    <string name="where_the_quiz_goes">WHERE THE QUIZ GOES</string>
    <string name="test_scripture_load_and_save">Test Scripture Load and Save</string>
    <string name="the_scripture">The Scripture</string>
    <string name="enter_notes_here">Enter Notes Here</string>
    <string name="empty" />
    <string name="myCoolButton">Save</string>
    <string name="FACEBOOK_LOGIN_ERROR">MAIN ACTIVITY FACE</string>
    <string name="LOGIN_ERROR">LOGIN ERROR</string>
    <string name="FACEBOOK_LOGIN_CANCEL">MAIN ACTIVITY FACE</string>
    <string name="LOGIN_CANCELLED">LOGIN CANCELLED</string>
    <string name="FACEBOOK_LOGIN_SECCESSFUL">MAIN ACTIVITY FACE</string>
    <string name="LOGIN_SECCESSFUL">LOGIN SUCCESSFUL</string>

    <string-array name="listArray">
        <item>AM</item>
        <item>PM</item>
    </string-array>

    <string-array name="listValues">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="title_activity_facebook">activity_facebook</string>
    <string name="verse">Verse</string>
    <string name="text">Text</string>
    <string name="button">Button</string>
    <string name="chapter">Chapter</string>
    <string name="book">Book</string>
    <string name="practice">Practice</string>
    <string name="add_scripture">Add Scripture</string>
    <string name="reference">Reference</string>
</resources>
