<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.byui_cs.jjmn.ponderize.AddScriptureActivity">

    <EditText
        android:id="@+id/editScriptureBook"
        android:labelFor="@id/editScriptureBook"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="3dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintLeft_toLeftOf="@+id/AddScriptureText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>

    <EditText
        android:id="@+id/editScriptureChapter"
        android:labelFor="@id/editScriptureChapter"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="number"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/editScriptureBook"
        app:layout_constraintTop_toBottomOf="@+id/editScriptureBook"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/editScriptureBook"/>

    <EditText
        android:id="@+id/editScriptureVerse"
        android:labelFor="@id/editScriptureVerse"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="number"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/editScriptureChapter"
        app:layout_constraintTop_toBottomOf="@+id/editScriptureChapter"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/editScriptureChapter"/>

    <EditText
        android:id="@+id/AddScriptureText"
        android:labelFor="@id/AddScriptureText"
        android:layout_width="308dp"
        android:layout_height="464dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:layout_marginEnd="4dp"
        tools:layout_editor_absoluteY="124dp"
        tools:layout_editor_absoluteX="99dp"
        app:layout_constraintRight_toRightOf="@+id/editScriptureVerse"
        app:layout_constraintTop_toBottomOf="@+id/editScriptureVerse"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/editScriptureVerse"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chapter"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="42dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verse"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_scripture"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="7dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="addScriptureToList"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="20dp"/>

</android.support.constraint.ConstraintLayout>
